# dioxus-spline

./: .cz.toml  .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  esbuild.js  index.html  package-lock.json  package.js  package.json  package.tsx
.github/: FUNDING.yml
.github/workflows/: bump.yml  ci.yml  combine_prs.yml  deploy.yml  dioxus.yml
assets/dioxus/: package.json  package.json.br  simple.js  simple.js.br  simple_bg.wasm  simple_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-spline-ccdc88af7b29041b/src/: runtime.js.br
docs/: index.html
examples/simple/: Cargo.toml  Dioxus.toml
examples/simple/docs/assets/dioxus/: simple.js  simple_bg.wasm
examples/simple/docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
examples/simple/src/: main.rs
scripts/: dev-build.rs
src/: lib.rs  runtime.rs  speobject.rs  spline.rs
