[workspace]
members = ["examples/simple"]

[package]
name = "dioxus-spline"
version = "0.1.0"
edition = "2021"
authors = ["Georgy Andreev <yawner@pm.me>"]
description = "A Spline component for dioxus"
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = "0.5"
dioxus-logger = "0.5.0"
tracing = "0.1.9"
wasm-bindgen = "0.2.9"
serde = "1.0.9"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.9", features = [
  "HtmlCanvasElement",
  "Document",
  "CustomEvent",
] }
wasm-bindgen-futures = "0.4.9"
js-sys = "0.3.9"
