[package]
name = "dioxus-spline"
version = "0.2.3"
edition = "2021"
authors = ["Georgy Andreev <yawner@pm.me>"]
description = "A Spline component for dioxus"
keywords = ["gui", "wasm", "web-programming", "dioxus"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LilDojd/dioxus-spline"
exclude = [".github/"]

[dependencies]
dioxus = "0.5.6"
dioxus-logger = "0.5.0"
dioxus-signals = "0.5.7"
tracing = "0.1.40"
wasm-bindgen = "0.2.92"
serde = "1.0.200"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.69", features = [
  "HtmlCanvasElement",
  "Document",
  "CustomEvent",
] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
