[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-logger = "0.5.0"
tracing = "0.1.9"
dioxus-spline = { path = "../../" }
wasm-bindgen = "0.2.9"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.9"
web-sys = { version = "0.3.9", features = [
  "HtmlCanvasElement",
  "Document",
  "CustomEvent",
] }
js-sys = "0.3.9"
